deployments/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: go-api-template
    app.kubernetes.io/part-of: myapp
