deployments/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-template
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-api-template
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
